--- a/_config.yml
+++ b/_config.yml
@@ -108,7 +108,7 @@ theme: next
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type: 'git'
+  type: git
   repo: https://github.com/Shigan-Liu/Shigan-Liu.github.io
   branch: master
 
