--- a/themes/next/package.json
+++ b/themes/next/package.json
@@ -34,6 +34,7 @@
     "node": ">=10.9.0"
   },
   "dependencies": {
+    "hexo-deployer-git": "^2.1.0",
     "hexo-generator-feed": "^3.0.0",
     "hexo-generator-searchdb": "^1.3.3"
   }
