--- a/_config.yml
+++ b/_config.yml
@@ -71,6 +71,11 @@ index_generator:
   per_page: 5 # default: 10
   order_by: -date
 
+archive_generator:
+  per_page: 20
+  yearly: true
+  monthly: true
+
 # Category & Tag
 default_category: uncategorized
 category_map:
