--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "hexo-filter-mermaid-diagrams": "^1.0.5",
     "hexo-generator-archive": "^1.0.0",
     "hexo-generator-category": "^1.0.0",
+    "hexo-generator-index": "^2.0.0",
     "hexo-generator-index-pin-top": "^0.2.2",
     "hexo-generator-searchdb": "^1.3.3",
     "hexo-generator-tag": "^1.0.0",
