--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "hexo": "^5.0.0",
     "hexo-abbrlink": "^2.2.1",
-    "hexo-asset-image": "^1.0.0",
+    "hexo-asset-image": "git+https://github.com/CodeFalling/hexo-asset-image.git",
     "hexo-autonofollow": "^1.0.1",
     "hexo-deployer-git": "github:hexojs/hexo-deployer-git",
     "hexo-filter-mermaid-diagrams": "^1.0.5",
@@ -24,6 +24,7 @@
     "hexo-generator-index-pin-top": "^0.2.2",
     "hexo-generator-searchdb": "^1.3.3",
     "hexo-generator-tag": "^1.0.0",
+    "hexo-pdf": "^1.1.1",
     "hexo-renderer-ejs": "^1.0.0",
     "hexo-renderer-pandoc": "^0.3.0",
     "hexo-renderer-stylus": "^2.0.0",
