--- a/themes/next/_config.yml
+++ b/themes/next/_config.yml
@@ -817,7 +817,7 @@ pdf:
 mermaid:
   enable: true
   # Available themes: default | dark | forest | neutral
-  theme: forest
+  theme: default
   version: "8.8.0"
 
 # ---------------------------------------------------------------
